--- a/2023-12-21-Awesom UI - Landing page/index.html
+++ b/2023-12-21-Awesom UI - Landing page/index.html
@@ -10,6 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <header>
@@ -22,6 +26,9 @@
 
                 
                 <ul class="navbar">
+                    <div class="menu-btn">
+                        <img src="svg/menu.svg" alt="">
+                    </div>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Store</a></li>
@@ -63,7 +70,7 @@
 
                 <div class="trip-right">
                     <div class="trip-box">
-                        <img class="svg" src="svg/smart-car.svg" alt="" >
+                        <img class="svg " src="svg/smart-car.svg" alt="" >
                         <h4>Car Rental</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
                     </div>
