--- a/2023-12-27- JS start/index.html
+++ b/2023-12-27- JS start/index.html
@@ -44,5 +44,6 @@
     <h2>Pavadinimas 5</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias modi quos ab deserunt ullam sunt cupiditate quasi impedit fugiat obcaecati? Vitae modi reiciendis, repellat minima qui perspiciatis! Rem, voluptatum sit.</p>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
