--- a/2024-02-01-CAO-Post-property-list/add.html
+++ b/2024-02-01-CAO-Post-property-list/add.html
@@ -40,6 +40,7 @@
           <!-- Generated list here -->
         </select>
         <button type="submit" class="addPropertyButton">Add property</button>
+        <a href="./index.html">Go Back</a>
       </form>
       <div id="statusMessages">
         <!-- Display server messages -->
