login tasks done

--- a/2024-01-24-login-uzduotys-storage/index.html
+++ b/2024-01-24-login-uzduotys-storage/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="image_1707293184207_vcxe0h7.svg" 
+            alt="logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+            <button id="burger-btn" class="burger-btn">
+                <img class="burger" src="image_1707293235036_wi898p.svg" alt="">
+            </button>
+        </nav>
+    </header>
+    <div id="mobile-menu" class="mobile-menu">
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </nav>
+      </div>
     <div class="form">
         <input id="userName" type="text" placeholder="user name">
         <input id="password" type="text" placeholder="password">
