--- a/2024-02-09-JS-baigiamasis-darbas/addPost/addPost.html
+++ b/2024-02-09-JS-baigiamasis-darbas/addPost/addPost.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ką tik nuo tralo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./addPostStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -17,13 +17,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./adImg/TC-12-2048x878.png.webp" class="d-block w-100" alt="ad">
+                <img src="../adImg/TC-12-2048x878.png.webp" class="d-block w-100" alt="ad">
             </div>
             <div class="carousel-item">
-                <img src="./adImg/TC-2-1600x686.png.webp" class="d-block w-100" alt="ad">
+                <img src="../adImg/TC-2-1600x686.png.webp" class="d-block w-100" alt="ad">
             </div>
             <div class="carousel-item">
-                <img src="./adImg/TC-7-2048x878.png.webp" class="d-block w-100" alt="ad">
+                <img src="../adImg/TC-7-2048x878.png.webp" class="d-block w-100" alt="ad">
             </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -39,18 +39,21 @@
 
     <div class="main-body">
         <div class="left-side-layout">
+
             <section class="logoPLace container-web">
                 <div id="logoBar" class="logoBar">
                     <div id="logo" class="logo">
-                        <img src="logo/logoColor.png" alt="">
+                        <img src="../logo/logoColor.png" alt="">
                     </div>
                 </div>
             </section>
 
+
+
             <section class="menu-bar container-web">
                 <div class="button-wrapper">
                     <button class="add-btn" id="add-btn">
-                        <a href="./addPost/addPost.html">+ Idėkite skelbimą</a>
+                        <a href="../index.html">👈 Grįžti Į Pradinį Puslapį</a>
                     </button>
                 </div>
                 <div class="menu">
@@ -74,12 +77,20 @@
                 </div>
             </section>
 
-            <section id="posts-wrapper" class="posts-wrapper container-web"></section>
+
+            <section id="add-post-wrapper" class="add-post-wrapper">
+                
+            </section>
+
         </div>
+
+
         <div class="right-side-layout">
-            <img src="adImg/WEB PROGRAMER.png" alt="" class="vertical-ad">
+            <img src="../adImg/WEB PROGRAMER.png" alt="" class="vertical-ad">
         </div>
     </div>
+
+
 
     <footer class="footer container-web">
             <div class="footer-list">
@@ -106,9 +117,9 @@
             </div>
     </footer>
 
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="./addPostScript.js"></script>
 </body>
 </html>
-
-
