--- a/2024-02-09-JS-baigiamasis-darbas/index.html
+++ b/2024-02-09-JS-baigiamasis-darbas/index.html
@@ -42,7 +42,7 @@
             <section class="logoPLace container-web">
                 <div id="logoBar" class="logoBar">
                     <div id="logo" class="logo">
-                        <img src="logo/logoColor.png" alt="">
+                        <img  src="logo/logoColor.png" alt="">
                     </div>
                 </div>
             </section>
@@ -71,6 +71,9 @@
                             <a href="#">Prisijungti</a>
                         </li>
                     </ul>
+                    <button class="burger-btn" id="burger-btn">
+                        <img class="burger" src="./logo/burger-list-menu-navigation-svgrepo-com.svg" alt="">
+                    </button>
                 </div>
             </section>
 
