main mobile done

--- a/2024-02-09-JS-baigiamasis-darbas/index.html
+++ b/2024-02-09-JS-baigiamasis-darbas/index.html
@@ -55,27 +55,28 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li>
-                            <a href="#">Kontaktai</a>
-                        </li>
-                        <li>
-                            <a href="#">Apie mus</a>
-                        </li>
-                        <li>
-                            <a href="#">D.U.K</a>
-                        </li>
-                        <li>
-                            <a href="#">Registruotis</a>
-                        </li>
-                        <li>
-                            <a href="#">Prisijungti</a>
-                        </li>
+                        <li><a href="#">Kontaktai</a></li>
+                        <li><a href="#">Apie mus</a></li>
+                        <li><a href="#">D.U.K</a></li>
+                        <li><a href="#">Registruotis</a></li>
+                        <li><a href="#">Prisijungti</a></li>
                     </ul>
                     <button class="burger-btn" id="burger-btn">
                         <img class="burger" src="./logo/burger-list-menu-navigation-svgrepo-com.svg" alt="">
                     </button>
                 </div>
             </section>
+            <div id="mobile-menu" class="mobile-menu">
+                <nav>
+                  <ul>
+                    <li><a href="#">Kontaktai</a></li>
+                    <li><a href="#">Apie mus</a></li>
+                    <li><a href="#">D.U.K</a></li>
+                    <li><a href="#">Registruotis</a></li>
+                    <li><a href="#">Prisijungti</a></li>
+                  </ul>
+                </nav>
+            </div>
 
             <section id="posts-wrapper" class="posts-wrapper container-web"></section>
         </div>
