--- a/2024-02-09-JS-baigiamasis-darbas/addPost/addPost.html
+++ b/2024-02-09-JS-baigiamasis-darbas/addPost/addPost.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    
+
     <div class="main-body">
         <div class="left-side-layout">
 
@@ -59,24 +59,28 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li>
-                            <a href="#">Kontaktai</a>
-                        </li>
-                        <li>
-                            <a href="#">Apie mus</a>
-                        </li>
-                        <li>
-                            <a href="#">D.U.K</a>
-                        </li>
-                        <li>
-                            <a href="#">Registruotis</a>
-                        </li>
-                        <li>
-                            <a href="#">Prisijungti</a>
-                        </li>
+                        <li><a href="#">Kontaktai</a></li>
+                        <li><a href="#">Apie mus</a></li>
+                        <li><a href="#">D.U.K</a></li>
+                        <li><a href="#">Registruotis</a></li>
+                        <li><a href="#">Prisijungti</a></li>
                     </ul>
+                    <button class="burger-btn" id="burger-btn">
+                        <img class="burger" src="../logo/burger-list-menu-navigation-svgrepo-com.svg" alt="">
+                    </button>
                 </div>
             </section>
+            <div id="mobile-menu" class="mobile-menu">
+                <nav>
+                  <ul>
+                    <li><a href="#">Kontaktai</a></li>
+                    <li><a href="#">Apie mus</a></li>
+                    <li><a href="#">D.U.K</a></li>
+                    <li><a href="#">Registruotis</a></li>
+                    <li><a href="#">Prisijungti</a></li>
+                  </ul>
+                </nav>
+            </div>
 
 
             <section id="add-post-wrapper" class="add-post-wrapper">
@@ -159,11 +163,13 @@
 
     <footer class="footer container-web">
             <div class="footer-list">
-                <img class="footer-logo" src="../logo/parasas.png" alt="">
+                <div class="footer-box">
+                    <img class="footer-logo" src="../logo/parasas.png" alt="">
+                </div>
                 <div class="footer-box">
                     <ul>
                         <li><a href="#">Kontaktai</a></li>
-                        <li><a href="#">Apie Mus</a>
+                        <li><a href="#">Apie Mus</a></li>
                     </ul> 
                 </div>
                 <div class="footer-box">
@@ -176,7 +182,9 @@
                     <ul>
                         <li><a href="#">Slapukų nustatymai</a></li>
                     </ul>  
-                    <div class="copyrights">2024 © PS All Rights Reserved. </div>
+                    <ul>
+                        <li class="copyrights">2024 © PS All Rights Reserved. </li>
+                    </ul>  
                 </div>
                 
             </div>
