--- a/2024-02-09-JS-baigiamasis-darbas/index.html
+++ b/2024-02-09-JS-baigiamasis-darbas/index.html
@@ -87,11 +87,13 @@
 
     <footer class="footer container-web">
             <div class="footer-list">
-                <img class="footer-logo" src="./logo/parasas.png" alt="">
+                <div class="footer-box">
+                    <img class="footer-logo" src="./logo/parasas.png" alt="">
+                </div>
                 <div class="footer-box">
                     <ul>
                         <li><a href="#">Kontaktai</a></li>
-                        <li><a href="#">Apie Mus</a>
+                        <li><a href="#">Apie Mus</a></li>
                     </ul> 
                 </div>
                 <div class="footer-box">
@@ -104,7 +106,9 @@
                     <ul>
                         <li><a href="#">Slapukų nustatymai</a></li>
                     </ul>  
-                    <div class="copyrights">2024 © PS All Rights Reserved. </div>
+                    <ul>
+                        <li class="copyrights">2024 © PS All Rights Reserved. </li>
+                    </ul>  
                 </div>
                 
             </div>
