--- a/2024-02-09-JS-baigiamasis-darbas/addPost/addPost.html
+++ b/2024-02-09-JS-baigiamasis-darbas/addPost/addPost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ką tik nuo tralo</title>
+    <title>Ką Tik Nuo Tralo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./addPostStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,7 +60,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="#">Kontaktai</a></li>
-                        <li><a href="#">Apie mus</a></li>
+                        <li><a href="#">Apie Mus</a></li>
                         <li><a href="#">D.U.K</a></li>
                         <li><a href="#">Registruotis</a></li>
                         <li><a href="#">Prisijungti</a></li>
@@ -74,7 +74,7 @@
                 <nav>
                   <ul>
                     <li><a href="#">Kontaktai</a></li>
-                    <li><a href="#">Apie mus</a></li>
+                    <li><a href="#">Apie Mus</a></li>
                     <li><a href="#">D.U.K</a></li>
                     <li><a href="#">Registruotis</a></li>
                     <li><a href="#">Prisijungti</a></li>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="footer-box">
                     <ul>
-                        <li><a href="#">Slapukų nustatymai</a></li>
+                        <li><a href="#">Slapukų Nustatymai</a></li>
                     </ul>  
                     <ul>
                         <li class="copyrights">2024 © PS All Rights Reserved. </li>
