--- a/2024-02-09-JS-baigiamasis-darbas/index.html
+++ b/2024-02-09-JS-baigiamasis-darbas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ką tik nuo tralo</title>
+    <title>Ką Tik Nuo Tralo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,13 +50,13 @@
             <section class="menu-bar container-web">
                 <div class="button-wrapper">
                     <button class="add-btn" id="add-btn">
-                        <a href="./addPost/addPost.html">+ Idėkite skelbimą</a>
+                        <a href="./addPost/addPost.html">+ Idėkite Skelbimą</a>
                     </button>
                 </div>
                 <div class="menu">
                     <ul>
                         <li><a href="#">Kontaktai</a></li>
-                        <li><a href="#">Apie mus</a></li>
+                        <li><a href="#">Apie Mus</a></li>
                         <li><a href="#">D.U.K</a></li>
                         <li><a href="#">Registruotis</a></li>
                         <li><a href="#">Prisijungti</a></li>
@@ -70,7 +70,7 @@
                 <nav>
                   <ul>
                     <li><a href="#">Kontaktai</a></li>
-                    <li><a href="#">Apie mus</a></li>
+                    <li><a href="#">Apie Mus</a></li>
                     <li><a href="#">D.U.K</a></li>
                     <li><a href="#">Registruotis</a></li>
                     <li><a href="#">Prisijungti</a></li>
