new tasks added

--- a/2023-11-22-HTML/index.html
+++ b/2023-11-22-HTML/index.html
@@ -19,6 +19,6 @@
     </ol>
 
     <p>Jeigu kažką primiršite, visada naudokite <a href="https://www.google.com/webhp?hl=lt&sa=X&ved=0ahUKEwjvsIKlxdeCAxX7RPEDHWWrDvgQPAgJ">Google</a></p>
-   
+   <script src="script.js"></script>
 </body>
 </html>
